# gitlab-mcp

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  TODO.md  prompt.md
.claude-plugin/: marketplace.json
.claude/commands/: release.md  test-api.md
.github/workflows/: ci.yml  release.yml
docs/: testing-protocol.md  testing.md
plugin/: .mcp.json
plugin/.claude-plugin/: plugin.json
src/: client.rs  config.rs  main.rs  test_util.rs
src/server/: http.rs
src/tools/: branches.rs  commits.rs  completions.rs  discussions.rs  emoji_reactions.rs  epics.rs  groups.rs  issue_discussions.rs  issue_notes.rs  issues.rs  jobs.rs  licenses.rs  live_tests.rs  merge_requests.rs  metadata.rs  mod.rs  pipeline_schedules.rs  pipelines.rs  projects.rs  prompts.rs  repositories.rs  repository_files.rs  resources.rs  runners.rs  search.rs  slim.rs  snippets.rs  users.rs  wikis.rs  work_items.rs
src/tools/live/: branches.rs  completions.rs  emoji_reactions.rs  harness.rs  issues.rs  licenses.rs  merge_requests.rs  mod.rs  mr_discussions.rs  prompts.rs  repository_files.rs  resources.rs  snippets.rs  users.rs  wikis.rs  work_items.rs
