[package]
name = "gitlab-mcp"
version = "0.29.0"
edition = "2024"
description = "An MCP server that exposes the GitLab API as tools for Claude and other MCP clients"
license = "GPL-3.0"

[[bin]]
name = "gitlab-mcp"
path = "src/main.rs"

[features]
# Opt-in live integration tests that hit a real GitLab instance.
# Compiled only under `cargo test --features live-tests`; require
# GITLAB_URL + GITLAB_TOKEN (and optionally GITLAB_TEST_PROJECT) in the env.
live-tests = []

[dependencies]
rmcp = { version = "1.8", features = [
    "server",
    "macros",
    "transport-io",
] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "query", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
url = "2"
percent-encoding = "2"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
wiremock = "0.6"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = true
